# smart-doc

./: .env.example  .gitignore  LLM_DISCOVERY_IMPLEMENTATION.md  Makefile  README.MD  app.py  case01_fsm.md  chapter4.md  check_intents.py  comprehensive_audit.py  conversation_transcript_appendix.tex  debug_lab_intent.py  dialogue_fsm.py  dialogue_fsm_data.py  dialogue_manager.py  inspiration-dissertation.md  knowledge_base_manager.py  main.py  nlg_service.py  nlu_service.py  requirements.txt  smartdoc_conversation_log.txt  system_logger.py  test_biased_diagnosis_path.py  test_correct_diagnosis_path.py  test_enhanced_intents.py  test_escalation.py  test_imaging_escalation_flow.py  test_improved_meds.py  test_labs_specific_intents.py  test_med_escalation_debug.py  test_medication_escalation_flow.py  test_payload.json  test_ra_query.py  test_validation.json  test_working_escalation.py  token.md  verify_intent_mapping.py
.github/: copilot-instructions.md
apps/api/: README.md  alembic.ini  create_admin_user.py  pyproject.toml  seed_admin_data.py  test_admin_login.py
apps/api/src/smartdoc_api/: __init__.py  dev_server.py  main.py
apps/api/src/smartdoc_api/db/: __init__.py  models.py
apps/api/src/smartdoc_api/db/migrations/: env.py
apps/api/src/smartdoc_api/db/migrations/versions/: 296da1a6f1d5_init_schema.py  60e9da095c7e_auth_tables.py  7f3d276bfd1e_add_admin_models_llmprofile_agentprompt_.py
apps/api/src/smartdoc_api/routes/: __init__.py  admin.py  assets.py  auth.py  chat.py  config.py  diagnosis.py  evaluation.py  legacy.py  simulation.py
apps/api/src/smartdoc_api/services/: auth_service.py  repo.py  seed_codes.py
apps/api/src/smartdoc_api/templates/: admin_settings.html  progressive_disclosure.html
apps/api/utils/: README.md  query_users.py  seed_admin_data.py
backups/: all_diagnoses_reflections_export.json  conversation_8_session_SESS_0W451OZEJ_export.json
configs/: default.yaml  dev.yaml  prod.yaml
data/: README.md
demos/: demo_admin_settings.py  demo_bias_detection.py  demo_bias_integration.py  demo_llm_intent_classification.py
deployments/: .env.example  .gitignore  DEPLOYMENT_OPTIONS.md  Dockerfile  Makefile  README.md  compose-single.yaml  compose.yaml  docker-compose.dev.yml  docker-compose.yml  health-check.sh  test_deployment.py  test_deployments.sh  web.nginx.conf
dev-tools/: README.md  check_intents.py  comprehensive_test_data_extract.py  debug_lab_intent.py  test_all_contexts_fallback.py  (+4 more)
(+185 files in other folders)
