[tool.poetry]
name = "smartdoc-api"
version = "0.1.0"
description = "Flask API for SmartDoc clinical simulation platform"
authors = ["Bruno Sena <bruno.sena@example.com>"]
packages = [{ include = "smartdoc_api", from = "src" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-cors = "^4.0.0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.0"
pyjwt = "^2.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "~4.0.0"  # Pin to 4.0.x to avoid compatibility issues
# Bring in your core package as a local path dependency (editable)
smartdoc-core = { path = "../../packages/core", develop = true }
sqlalchemy = "^2.0.43"
alembic = "^1.16.4"
psycopg2-binary = ">=2.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.5.0"
black = "^24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "T20"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=smartdoc_api --cov-report=term-missing"
